--- a/api-test-performance/.github/dependabot.yml
+++ b/api-test-performance/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: "npm"
-    directory: "/api-test-performance"
+    directory: "/"
     labels:
       - "dependencies"
     schedule:
