--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -173,6 +173,9 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./api-test-automation/test-report
           keep_files: true
+          force_orphan: true
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
 
       - name: Cleanup Docker
         if: always()
