--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -88,8 +88,8 @@ jobs:
           # Construct test command based on inputs
           CMD="npx playwright test"
 
-          # Add project selection
-          CMD="$CMD --project='API Tests'"
+          # Add project selection (with proper quoting)
+          CMD="$CMD --project=\"API Tests\""
 
           # Add test type filter if specified
           if [ "${{ github.event.inputs.test_type }}" != "all" ]; then
@@ -101,8 +101,11 @@ jobs:
             CMD="$CMD --debug"
           fi
 
+          # Output the command for debugging
+          echo "Running command: $CMD"
+
           # Run the tests
-          $CMD
+          eval "$CMD"
 
       - name: Prepare Test Report
         if: always()
