--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -40,39 +40,26 @@ jobs:
           distribution: "temurin"
           cache: "maven"
 
-      - name: Build Petstore with Maven
-        working-directory: ./swagger-petstore
+      - name: Build & Start Petstore
         run: |
+          cd swagger-petstore
           mvn clean package -DskipTests
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Petstore Docker Image
-        working-directory: ./swagger-petstore
-        run: |
           docker build -t swaggerapi/petstore3:unstable .
-
-      - name: Start Petstore Container
-        run: |
           docker run --name swaggerapi-petstore3 -d -p 8080:8080 swaggerapi/petstore3:unstable
-          # Wait for server to be ready
           timeout 60 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8080/api/v3/openapi.json)" != "200" ]]; do sleep 5; done' || false
 
-      - name: Setup Node.js
+      - name: Setup Node.js and Install Dependencies
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: "npm"
           cache-dependency-path: "./api-test-automation/package-lock.json"
 
-      - name: Install dependencies
+      - name: Install Dependencies and Playwright
         working-directory: ./api-test-automation
-        run: npm ci
-
-      - name: Install Playwright
-        working-directory: ./api-test-automation
-        run: npx playwright install --with-deps
+        run: |
+          npm ci
+          npx playwright install --with-deps
 
       - name: Run API Tests
         working-directory: ./api-test-automation
@@ -89,46 +76,24 @@ jobs:
         run: |
           mkdir -p test-report
           cp -r playwright-report/* test-report/
-
-          # Create an index page with test configuration
           cat << EOF > test-report/config.html
-          <html>
-          <head>
-            <style>
-              body { font-family: Arial, sans-serif; margin: 40px; }
-              .test-info { margin-bottom: 20px; }
-              .config-section { margin-bottom: 30px; }
-            </style>
-          </head>
+          <html><head><style>
+            body { font-family: Arial, sans-serif; margin: 40px; }
+            .config-section { margin-bottom: 30px; }
+          </style></head>
           <body>
             <h1>Test Configuration</h1>
-            <div class="test-info">
-              <div class="config-section">
-                <h3>Test Parameters</h3>
-                <p>Test Suite: ${{ github.event.inputs.test_type || 'all' }}</p>
-                <p>Debug Mode: ${{ github.event.inputs.debug || 'false' }}</p>
-              </div>
-              
-              <div class="config-section">
-                <h3>Environment</h3>
-                <p>API URL: http://localhost:8080/api/v3</p>
-                <p>Run Date: $(date)</p>
-                <p>Workflow: ${{ github.workflow }}</p>
-                <p>Run ID: ${{ github.run_id }}</p>
-              </div>
+            <div class="config-section">
+              <h3>Test Parameters</h3>
+              <p>Test Suite: ${{ github.event.inputs.test_type || 'all' }}</p>
+              <p>Debug Mode: ${{ github.event.inputs.debug || 'false' }}</p>
+              <p>API URL: http://localhost:8080/api/v3</p>
+              <p>Run Date: $(date)</p>
+              <p>Run ID: ${{ github.run_id }}</p>
             </div>
             <p><a href="./index.html">View Test Report</a></p>
-          </body>
-          </html>
+          </body></html>
           EOF
-
-      - name: Upload Test Report Artifact
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: ./api-test-automation/test-report/
-          retention-days: 30
 
       - name: Deploy Report to GitHub Pages
         if: always()
@@ -136,25 +101,17 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./api-test-automation/test-report
-          keep_files: true
           force_orphan: true
           user_name: "github-actions[bot]"
           user_email: "github-actions[bot]@users.noreply.github.com"
 
-      - name: Cleanup Docker
+      - name: Cleanup
         if: always()
         run: |
           docker stop swaggerapi-petstore3 || true
           docker rm swaggerapi-petstore3 || true
           docker image rm swaggerapi/petstore3:unstable || true
           docker system prune -f
-
-      - name: Cleanup Environment
-        if: always()
-        working-directory: ./api-test-automation
-        run: |
-          rm -rf swagger-petstore
-          npm run clean || true
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
