fixing playwright workflow

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -55,28 +55,11 @@ jobs:
           cache: "npm"
           cache-dependency-path: "./api-test-automation/package-lock.json"
 
-      - name: Install Dependencies and Playwright
+      - name: Install Dependencies and Build
         working-directory: ./api-test-automation
         run: |
           npm ci
           npx playwright install --with-deps
-
-      - name: Verify Project Structure
-        working-directory: ./api-test-automation
-        run: |
-          echo "Current directory structure:"
-          ls -la
-          echo "Source directory:"
-          ls -la src/api || echo "src/api not found"
-          echo "Tests directory:"
-          ls -la tests || echo "tests not found"
-
-      - name: Build TypeScript
-        working-directory: ./api-test-automation
-        run: |
-          echo "TypeScript version:"
-          npx tsc --version
-          echo "Building TypeScript files..."
           npx tsc --project tsconfig.json
 
       - name: Run API Tests
