--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -79,6 +79,23 @@ jobs:
         working-directory: ./api-test-automation
         run: npm run test
 
+      - name: Create index.html for GitHub Pages
+        working-directory: ./api-test-automation/playwright-report
+        run: |
+          cat > index.html << 'EOF'
+          <!DOCTYPE html>
+          <html>
+            <head>
+              <meta charset="utf-8">
+              <title>Playwright Test Report</title>
+              <meta http-equiv="refresh" content="0; url=./index.html">
+            </head>
+            <body>
+              <p>Redirecting to test report...</p>
+            </body>
+          </html>
+          EOF
+
       - name: Upload Test Report
         if: always()
         uses: actions/upload-artifact@v4
@@ -96,6 +113,9 @@ jobs:
           force_orphan: true
           user_name: "github-actions[bot]"
           user_email: "github-actions[bot]@users.noreply.github.com"
+
+      - name: Wait for GitHub Pages
+        run: sleep 30
 
       - name: Cleanup
         if: always()
